feat: total sales per region

--- a/notebooks/sn03_aggregate_data.ipynb
+++ b/notebooks/sn03_aggregate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "d69d493a-0716-47e7-bc80-0ef36753fdf8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 64,
    "id": "7302bac8-3643-4701-a1af-ea028dc8af38",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "id": "d93c4011-0731-4992-9863-c198d570e18e",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "id": "5ed00545-9d1e-4521-9d44-c6da89d5e4e5",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 67,
    "id": "9c93b32b-443e-4321-80fa-3d46fa8a0b1d",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 68,
    "id": "afb85718-4c7a-42e5-8531-bb93bcf1efff",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "id": "678f7d00-74f2-4632-a56b-d672ae8a1d7b",
    "metadata": {},
    "outputs": [
@@ -1021,11 +1021,561 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "4498ac73-7544-4b25-bc6c-86f416d0a4a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OrderNo</th>\n",
+       "      <th>Empno</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Empname</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4626232</td>\n",
+       "      <td>9003</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>Tom Heints</td>\n",
+       "      <td>NYC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4626377</td>\n",
+       "      <td>9003</td>\n",
+       "      <td>2021-08-052021-08-05</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>Tom Heints</td>\n",
+       "      <td>NYC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4626412</td>\n",
+       "      <td>9004</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>Maya Silver</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4626490</td>\n",
+       "      <td>9004</td>\n",
+       "      <td>2021-08-062021-08-06</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>Maya Silver</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9423517</td>\n",
+       "      <td>9001</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>Jeff Russell</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9423534</td>\n",
+       "      <td>9001</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Jeff Russell</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9423679</td>\n",
+       "      <td>9002</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Nick Boorman</td>\n",
+       "      <td>San Francisco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9423783</td>\n",
+       "      <td>9002</td>\n",
+       "      <td>2021-08-062021-08-06</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Nick Boorman</td>\n",
+       "      <td>San Francisco</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OrderNo  Empno                  Date  Total       Empname       Location\n",
+       "0  4626232   9003  2021-08-042021-08-04   97.0    Tom Heints            NYC\n",
+       "1  4626377   9003  2021-08-052021-08-05   82.0    Tom Heints            NYC\n",
+       "2  4626412   9004            2021-08-05   78.0   Maya Silver   Philadelphia\n",
+       "3  4626490   9004  2021-08-062021-08-06  110.0   Maya Silver   Philadelphia\n",
+       "4  9423517   9001  2021-08-042021-08-04  199.0  Jeff Russell             LA\n",
+       "5  9423534   9001  2021-08-042021-08-04   44.0  Jeff Russell             LA\n",
+       "6  9423679   9002            2021-08-05   35.0  Nick Boorman  San Francisco\n",
+       "7  9423783   9002  2021-08-062021-08-06   86.0  Nick Boorman  San Francisco"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_region_sales = df_order_totals.merge(df_emps)\n",
+    "\n",
+    "display(df_region_sales)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ca5cdd55-b50e-4033-80e9-dd8c6cd151e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>OrderNo</th>\n",
+       "      <th>Empno</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Empname</th>\n",
+       "      <th>Location</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4626232</td>\n",
+       "      <td>9003</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>Tom Heints</td>\n",
+       "      <td>NYC</td>\n",
+       "      <td>East</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4626377</td>\n",
+       "      <td>9003</td>\n",
+       "      <td>2021-08-052021-08-05</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>Tom Heints</td>\n",
+       "      <td>NYC</td>\n",
+       "      <td>East</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4626412</td>\n",
+       "      <td>9004</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>Maya Silver</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>East</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4626490</td>\n",
+       "      <td>9004</td>\n",
+       "      <td>2021-08-062021-08-06</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>Maya Silver</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>East</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9423517</td>\n",
+       "      <td>9001</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>Jeff Russell</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>9423534</td>\n",
+       "      <td>9001</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Jeff Russell</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>9423679</td>\n",
+       "      <td>9002</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Nick Boorman</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>West</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>9423783</td>\n",
+       "      <td>9002</td>\n",
+       "      <td>2021-08-062021-08-06</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Nick Boorman</td>\n",
+       "      <td>San Francisco</td>\n",
+       "      <td>West</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   OrderNo  Empno                  Date  Total       Empname       Location  \\\n",
+       "0  4626232   9003  2021-08-042021-08-04   97.0    Tom Heints            NYC   \n",
+       "1  4626377   9003  2021-08-052021-08-05   82.0    Tom Heints            NYC   \n",
+       "2  4626412   9004            2021-08-05   78.0   Maya Silver   Philadelphia   \n",
+       "3  4626490   9004  2021-08-062021-08-06  110.0   Maya Silver   Philadelphia   \n",
+       "4  9423517   9001  2021-08-042021-08-04  199.0  Jeff Russell             LA   \n",
+       "5  9423534   9001  2021-08-042021-08-04   44.0  Jeff Russell             LA   \n",
+       "6  9423679   9002            2021-08-05   35.0  Nick Boorman  San Francisco   \n",
+       "7  9423783   9002  2021-08-062021-08-06   86.0  Nick Boorman  San Francisco   \n",
+       "\n",
+       "  Region  \n",
+       "0   East  \n",
+       "1   East  \n",
+       "2   East  \n",
+       "3   East  \n",
+       "4   West  \n",
+       "5   West  \n",
+       "6   West  \n",
+       "7   West  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_region_sales = df_region_sales.merge(df_locations)\n",
+    "\n",
+    "display(df_region_sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e853494-6076-4e4a-8d07-8b9c7d7bfbc4",
+   "metadata": {},
+   "source": [
+    "Great! Now every order also has the \"Region\", \"Location\" and the `Empname` as a side-effect."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a8fc465-4b8e-4ae0-b5ce-f267914eb91f",
+   "metadata": {},
+   "source": [
+    "Using `groupby`, we can join rows that has the same `Region`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "8e13801e-7aa1-46bc-9091-d799e99ea5e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>OrderNo</th>\n",
+       "      <th>Empno</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Empname</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>East</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>4626232</td>\n",
+       "      <td>9003</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>Tom Heints</td>\n",
+       "      <td>NYC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>East</td>\n",
+       "      <td>2021-08-052021-08-05</td>\n",
+       "      <td>4626377</td>\n",
+       "      <td>9003</td>\n",
+       "      <td>82.0</td>\n",
+       "      <td>Tom Heints</td>\n",
+       "      <td>NYC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>East</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>4626412</td>\n",
+       "      <td>9004</td>\n",
+       "      <td>78.0</td>\n",
+       "      <td>Maya Silver</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>East</td>\n",
+       "      <td>2021-08-062021-08-06</td>\n",
+       "      <td>4626490</td>\n",
+       "      <td>9004</td>\n",
+       "      <td>110.0</td>\n",
+       "      <td>Maya Silver</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>West</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>9423517</td>\n",
+       "      <td>9001</td>\n",
+       "      <td>199.0</td>\n",
+       "      <td>Jeff Russell</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>West</td>\n",
+       "      <td>2021-08-042021-08-04</td>\n",
+       "      <td>9423534</td>\n",
+       "      <td>9001</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>Jeff Russell</td>\n",
+       "      <td>LA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>West</td>\n",
+       "      <td>2021-08-05</td>\n",
+       "      <td>9423679</td>\n",
+       "      <td>9002</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>Nick Boorman</td>\n",
+       "      <td>San Francisco</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>West</td>\n",
+       "      <td>2021-08-062021-08-06</td>\n",
+       "      <td>9423783</td>\n",
+       "      <td>9002</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>Nick Boorman</td>\n",
+       "      <td>San Francisco</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Region                  Date  OrderNo  Empno  Total       Empname  \\\n",
+       "0   East  2021-08-042021-08-04  4626232   9003   97.0    Tom Heints   \n",
+       "1   East  2021-08-052021-08-05  4626377   9003   82.0    Tom Heints   \n",
+       "2   East            2021-08-05  4626412   9004   78.0   Maya Silver   \n",
+       "3   East  2021-08-062021-08-06  4626490   9004  110.0   Maya Silver   \n",
+       "4   West  2021-08-042021-08-04  9423517   9001  199.0  Jeff Russell   \n",
+       "5   West  2021-08-042021-08-04  9423534   9001   44.0  Jeff Russell   \n",
+       "6   West            2021-08-05  9423679   9002   35.0  Nick Boorman   \n",
+       "7   West  2021-08-062021-08-06  9423783   9002   86.0  Nick Boorman   \n",
+       "\n",
+       "        Location  \n",
+       "0            NYC  \n",
+       "1            NYC  \n",
+       "2   Philadelphia  \n",
+       "3   Philadelphia  \n",
+       "4             LA  \n",
+       "5             LA  \n",
+       "6  San Francisco  \n",
+       "7  San Francisco  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_region_sales = df_region_sales.reset_index().reindex(columns = ['Region', 'Date', 'OrderNo', 'Empno', 'Total', 'Empname', 'Location'])\n",
+    "\n",
+    "display(df_region_sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99c93ce3-c0db-4fea-a8fb-b21b2d8aa6e0",
+   "metadata": {},
+   "source": [
+    "Finally, lets drop undesired columns from our `DataFrame`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "362ec550-c17f-46ba-a8d6-67e31a4f6e71",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Region</th>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"4\" valign=\"top\">East</th>\n",
+       "      <th>2021-08-042021-08-04</th>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-05</th>\n",
+       "      <td>78.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-052021-08-05</th>\n",
+       "      <td>82.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-062021-08-06</th>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"3\" valign=\"top\">West</th>\n",
+       "      <th>2021-08-042021-08-04</th>\n",
+       "      <td>243.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-05</th>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-08-062021-08-06</th>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Total\n",
+       "Region Date                       \n",
+       "East   2021-08-042021-08-04   97.0\n",
+       "       2021-08-05             78.0\n",
+       "       2021-08-052021-08-05   82.0\n",
+       "       2021-08-062021-08-06  110.0\n",
+       "West   2021-08-042021-08-04  243.0\n",
+       "       2021-08-05             35.0\n",
+       "       2021-08-062021-08-06   86.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_region_sales = df_region_sales[['Date', 'Region', 'Total']]\n",
+    "df_region_sales = df_region_sales.groupby(['Region', 'Date']).sum()\n",
+    "\n",
+    "display(df_region_sales)"
+   ]
   }
  ],
  "metadata": {
