--- a/notebooks/sn03_aggregate_data.ipynb
+++ b/notebooks/sn03_aggregate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 74,
    "id": "d69d493a-0716-47e7-bc80-0ef36753fdf8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 75,
    "id": "7302bac8-3643-4701-a1af-ea028dc8af38",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 76,
    "id": "d93c4011-0731-4992-9863-c198d570e18e",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 77,
    "id": "5ed00545-9d1e-4521-9d44-c6da89d5e4e5",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 78,
    "id": "9c93b32b-443e-4321-80fa-3d46fa8a0b1d",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th>Date</th>\n",
+       "      <th></th>\n",
        "      <th>Item</th>\n",
        "      <th>Brand</th>\n",
        "      <th>Price</th>\n",
@@ -580,7 +580,7 @@
        "    <tr>\n",
        "      <th>OrderNo</th>\n",
        "      <th>Empno</th>\n",
-       "      <th></th>\n",
+       "      <th>Date</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -592,7 +592,7 @@
        "    <tr>\n",
        "      <th>4626232</th>\n",
        "      <th>9003</th>\n",
-       "      <td>2021-08-042021-08-04</td>\n",
+       "      <th>2021-08-04</th>\n",
        "      <td>SocksJeans</td>\n",
        "      <td>VansQuiksilver</td>\n",
        "      <td>97.0</td>\n",
@@ -602,7 +602,7 @@
        "    <tr>\n",
        "      <th>4626377</th>\n",
        "      <th>9003</th>\n",
-       "      <td>2021-08-052021-08-05</td>\n",
+       "      <th>2021-08-05</th>\n",
        "      <td>HoodyCargo Shorts</td>\n",
        "      <td>AnimalAnimal</td>\n",
        "      <td>82.0</td>\n",
@@ -612,7 +612,7 @@
        "    <tr>\n",
        "      <th>4626412</th>\n",
        "      <th>9004</th>\n",
-       "      <td>2021-08-05</td>\n",
+       "      <th>2021-08-05</th>\n",
        "      <td>Shirt</td>\n",
        "      <td>Volcom</td>\n",
        "      <td>78.0</td>\n",
@@ -622,7 +622,7 @@
        "    <tr>\n",
        "      <th>4626490</th>\n",
        "      <th>9004</th>\n",
-       "      <td>2021-08-062021-08-06</td>\n",
+       "      <th>2021-08-06</th>\n",
        "      <td>Cargo ShortsSweater</td>\n",
        "      <td>BillabongDickies</td>\n",
        "      <td>110.0</td>\n",
@@ -632,7 +632,7 @@
        "    <tr>\n",
        "      <th>9423517</th>\n",
        "      <th>9001</th>\n",
-       "      <td>2021-08-042021-08-04</td>\n",
+       "      <th>2021-08-04</th>\n",
        "      <td>JeansJacket</td>\n",
        "      <td>Rip CurlThe North Face</td>\n",
        "      <td>199.0</td>\n",
@@ -642,7 +642,7 @@
        "    <tr>\n",
        "      <th>9423534</th>\n",
        "      <th>9001</th>\n",
-       "      <td>2021-08-042021-08-04</td>\n",
+       "      <th>2021-08-04</th>\n",
        "      <td>SocksSocks</td>\n",
        "      <td>DCQuiksilver</td>\n",
        "      <td>22.0</td>\n",
@@ -652,7 +652,7 @@
        "    <tr>\n",
        "      <th>9423679</th>\n",
        "      <th>9002</th>\n",
-       "      <td>2021-08-05</td>\n",
+       "      <th>2021-08-05</th>\n",
        "      <td>T-shirt</td>\n",
        "      <td>Patagonia</td>\n",
        "      <td>35.0</td>\n",
@@ -662,7 +662,7 @@
        "    <tr>\n",
        "      <th>9423783</th>\n",
        "      <th>9002</th>\n",
-       "      <td>2021-08-062021-08-06</td>\n",
+       "      <th>2021-08-06</th>\n",
        "      <td>Boxer ShortsShorts</td>\n",
        "      <td>SuperdryGlobe</td>\n",
        "      <td>56.0</td>\n",
@@ -674,27 +674,27 @@
        "</div>"
       ],
       "text/plain": [
-       "                               Date                 Item  \\\n",
-       "OrderNo Empno                                              \n",
-       "4626232 9003   2021-08-042021-08-04           SocksJeans   \n",
-       "4626377 9003   2021-08-052021-08-05    HoodyCargo Shorts   \n",
-       "4626412 9004             2021-08-05                Shirt   \n",
-       "4626490 9004   2021-08-062021-08-06  Cargo ShortsSweater   \n",
-       "9423517 9001   2021-08-042021-08-04          JeansJacket   \n",
-       "9423534 9001   2021-08-042021-08-04           SocksSocks   \n",
-       "9423679 9002             2021-08-05              T-shirt   \n",
-       "9423783 9002   2021-08-062021-08-06   Boxer ShortsShorts   \n",
+       "                                         Item                   Brand  Price  \\\n",
+       "OrderNo Empno Date                                                             \n",
+       "4626232 9003  2021-08-04           SocksJeans          VansQuiksilver   97.0   \n",
+       "4626377 9003  2021-08-05    HoodyCargo Shorts            AnimalAnimal   82.0   \n",
+       "4626412 9004  2021-08-05                Shirt                  Volcom   78.0   \n",
+       "4626490 9004  2021-08-06  Cargo ShortsSweater        BillabongDickies  110.0   \n",
+       "9423517 9001  2021-08-04          JeansJacket  Rip CurlThe North Face  199.0   \n",
+       "9423534 9001  2021-08-04           SocksSocks            DCQuiksilver   22.0   \n",
+       "9423679 9002  2021-08-05              T-shirt               Patagonia   35.0   \n",
+       "9423783 9002  2021-08-06   Boxer ShortsShorts           SuperdryGlobe   56.0   \n",
        "\n",
-       "                                Brand  Price  Quantity  Total  \n",
-       "OrderNo Empno                                                  \n",
-       "4626232 9003           VansQuiksilver   97.0         2   97.0  \n",
-       "4626377 9003             AnimalAnimal   82.0         2   82.0  \n",
-       "4626412 9004                   Volcom   78.0         1   78.0  \n",
-       "4626490 9004         BillabongDickies  110.0         2  110.0  \n",
-       "9423517 9001   Rip CurlThe North Face  199.0         2  199.0  \n",
-       "9423534 9001             DCQuiksilver   22.0         4   44.0  \n",
-       "9423679 9002                Patagonia   35.0         1   35.0  \n",
-       "9423783 9002            SuperdryGlobe   56.0         3   86.0  "
+       "                          Quantity  Total  \n",
+       "OrderNo Empno Date                         \n",
+       "4626232 9003  2021-08-04         2   97.0  \n",
+       "4626377 9003  2021-08-05         2   82.0  \n",
+       "4626412 9004  2021-08-05         1   78.0  \n",
+       "4626490 9004  2021-08-06         2  110.0  \n",
+       "9423517 9001  2021-08-04         2  199.0  \n",
+       "9423534 9001  2021-08-04         4   44.0  \n",
+       "9423679 9002  2021-08-05         1   35.0  \n",
+       "9423783 9002  2021-08-06         3   86.0  "
       ]
      },
      "metadata": {},
@@ -704,7 +704,7 @@
    "source": [
     "# A new DataFrame grouping by Order can be created to sum the total for each order using `groupby`\n",
     "\n",
-    "df_order_totals = df_sales.groupby(['OrderNo', 'Empno']).sum()\n",
+    "df_order_totals = df_sales.groupby(['OrderNo', 'Empno', 'Date']).sum()\n",
     "\n",
     "display(df_order_totals)"
    ]
