--- a/notebooks/sn03_aggregate_data.ipynb
+++ b/notebooks/sn03_aggregate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
    "id": "d69d493a-0716-47e7-bc80-0ef36753fdf8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 84,
    "id": "7302bac8-3643-4701-a1af-ea028dc8af38",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 85,
    "id": "d93c4011-0731-4992-9863-c198d570e18e",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 86,
    "id": "5ed00545-9d1e-4521-9d44-c6da89d5e4e5",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 87,
    "id": "9c93b32b-443e-4321-80fa-3d46fa8a0b1d",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 88,
    "id": "afb85718-4c7a-42e5-8531-bb93bcf1efff",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "id": "678f7d00-74f2-4632-a56b-d672ae8a1d7b",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "id": "4498ac73-7544-4b25-bc6c-86f416d0a4a5",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 91,
    "id": "ca5cdd55-b50e-4033-80e9-dd8c6cd151e9",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 92,
    "id": "8e13801e-7aa1-46bc-9091-d799e99ea5e6",
    "metadata": {},
    "outputs": [
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 93,
    "id": "362ec550-c17f-46ba-a8d6-67e31a4f6e71",
    "metadata": {},
    "outputs": [
@@ -1550,6 +1550,385 @@
     "df_region_sales = df_region_sales.groupby(['Region', 'Date']).sum()\n",
     "\n",
     "display(df_region_sales)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce56734c-109e-418f-aaff-f33beb318f25",
+   "metadata": {},
+   "source": [
+    "> Aggregation order matters!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "9f70f39c-fad1-475b-ac63-a3a69483e0ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th>Region</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2021-08-04</th>\n",
+       "      <th>East</th>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>243.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2021-08-05</th>\n",
+       "      <th>East</th>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2021-08-06</th>\n",
+       "      <th>East</th>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>West</th>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Total\n",
+       "Date       Region       \n",
+       "2021-08-04 East     97.0\n",
+       "           West    243.0\n",
+       "2021-08-05 East    160.0\n",
+       "           West     35.0\n",
+       "2021-08-06 East    110.0\n",
+       "           West     86.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_date_region_agg = df_region_sales.groupby(['Date', 'Region']).sum()\n",
+    "display(df_date_region_agg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "813487e6-742c-4f48-b374-d7f8605398b2",
+   "metadata": {},
+   "source": [
+    "Given that both `Date` and `Region` are indexes, together these form a _hirerachical index_ also known as _multilevel index_ (a.k.a. `MultiIndex`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93790c25-766e-4b2d-9635-ffd8e3cc380e",
+   "metadata": {},
+   "source": [
+    "`MultiIndex`es make it possible to work with data that has an arbitrary number of dimensions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec9f50f8-e124-4720-99ad-27124dbfe124",
+   "metadata": {},
+   "source": [
+    "In our example we have 3 axes being `Date`, `Region` and `Aggregation`. This is also known as a 3D Dataset.\n",
+    "\n",
+    "Axis | Coordinates\n",
+    "--- | ---\n",
+    "`Date` | `2022-02-04`,`2021-08-05`, `2021-08-06`\n",
+    "`Region` | `West`, `East`\n",
+    "`Aggregation` | `Total`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "b4d18ba9-1d7d-401c-babe-9acd86135f66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex([('2021-08-04', 'East'),\n",
+      "            ('2021-08-04', 'West'),\n",
+      "            ('2021-08-05', 'East'),\n",
+      "            ('2021-08-05', 'West'),\n",
+      "            ('2021-08-06', 'East'),\n",
+      "            ('2021-08-06', 'West')],\n",
+      "           names=['Date', 'Region'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Retrieve all available indexes in a data frame\n",
+    "print(df_date_region_agg.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "97039742-2ca5-4d00-9933-ef26f555faa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th>Region</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-08-05</th>\n",
+       "      <th>West</th>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   Total\n",
+       "Date       Region       \n",
+       "2021-08-05 West     35.0"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Knowing indexes we can access the Total for a `Date` and `Region`\n",
+    "df_date_region_agg[df_date_region_agg.index.isin([('2021-08-05', 'West')])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "107452d1-04fe-4712-9c20-cf8d08b91c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total    731.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Creates a series from a sum on the total\n",
+    "grand_total_series = df_date_region_agg.sum(axis = 0)\n",
+    "print(grand_total_series)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "7fb68d61-ca0f-4e13-a449-c28118a42692",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set a name for the series\n",
+    "grand_total_series.name = ('Grand Total', 'Grand Total')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "63ce9c68-9a43-4120-9f6c-d76aa7ea9411",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>97.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>243.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>110.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>86.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>731.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total\n",
+       "0   97.0\n",
+       "1  243.0\n",
+       "2  160.0\n",
+       "3   35.0\n",
+       "4  110.0\n",
+       "5   86.0\n",
+       "6  731.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df_date_region_total = pd.concat([df_date_region_agg, pd.DataFrame([grand_total_series])], ignore_index=True)\n",
+    "\n",
+    "display(df_date_region_total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "5388e301-e18a-450e-bd1b-adfdac02ad65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Total]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_date_region_total[df_date_region_total.index.isin([('Grand Total', 'Grand Total')])]"
    ]
   }
  ],
