fix: use axis = 0 on concat

--- a/notebooks/sn03_aggregate_data.ipynb
+++ b/notebooks/sn03_aggregate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 1,
    "id": "d69d493a-0716-47e7-bc80-0ef36753fdf8",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "id": "7302bac8-3643-4701-a1af-ea028dc8af38",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "id": "d93c4011-0731-4992-9863-c198d570e18e",
    "metadata": {},
    "outputs": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "5ed00545-9d1e-4521-9d44-c6da89d5e4e5",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "id": "9c93b32b-443e-4321-80fa-3d46fa8a0b1d",
    "metadata": {},
    "outputs": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "id": "afb85718-4c7a-42e5-8531-bb93bcf1efff",
    "metadata": {},
    "outputs": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "id": "678f7d00-74f2-4632-a56b-d672ae8a1d7b",
    "metadata": {},
    "outputs": [
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "id": "4498ac73-7544-4b25-bc6c-86f416d0a4a5",
    "metadata": {},
    "outputs": [
@@ -1155,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "id": "ca5cdd55-b50e-4033-80e9-dd8c6cd151e9",
    "metadata": {},
    "outputs": [
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "id": "8e13801e-7aa1-46bc-9091-d799e99ea5e6",
    "metadata": {},
    "outputs": [
@@ -1465,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "id": "362ec550-c17f-46ba-a8d6-67e31a4f6e71",
    "metadata": {},
    "outputs": [
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "9f70f39c-fad1-475b-ac63-a3a69483e0ea",
    "metadata": {},
    "outputs": [
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "id": "b4d18ba9-1d7d-401c-babe-9acd86135f66",
    "metadata": {},
    "outputs": [
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "id": "97039742-2ca5-4d00-9933-ef26f555faa5",
    "metadata": {},
    "outputs": [
@@ -1755,7 +1755,7 @@
        "2021-08-05 West     35.0"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "id": "107452d1-04fe-4712-9c20-cf8d08b91c57",
    "metadata": {},
    "outputs": [
@@ -1788,7 +1788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "id": "7fb68d61-ca0f-4e13-a449-c28118a42692",
    "metadata": {},
    "outputs": [],
@@ -1799,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 24,
    "id": "63ce9c68-9a43-4120-9f6c-d76aa7ea9411",
    "metadata": {},
    "outputs": [
@@ -1824,36 +1824,41 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>Total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2021-08-04</th>\n",
+       "      <th>East</th>\n",
        "      <td>97.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>West</th>\n",
        "      <td>243.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2021-08-05</th>\n",
+       "      <th>East</th>\n",
        "      <td>160.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>West</th>\n",
        "      <td>35.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2021-08-06</th>\n",
+       "      <th>East</th>\n",
        "      <td>110.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>West</th>\n",
        "      <td>86.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <th>Grand Total</th>\n",
+       "      <th>Grand Total</th>\n",
        "      <td>731.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1861,14 +1866,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Total\n",
-       "0   97.0\n",
-       "1  243.0\n",
-       "2  160.0\n",
-       "3   35.0\n",
-       "4  110.0\n",
-       "5   86.0\n",
-       "6  731.0"
+       "                         Total\n",
+       "2021-08-04  East          97.0\n",
+       "            West         243.0\n",
+       "2021-08-05  East         160.0\n",
+       "            West          35.0\n",
+       "2021-08-06  East         110.0\n",
+       "            West          86.0\n",
+       "Grand Total Grand Total  731.0"
       ]
      },
      "metadata": {},
@@ -1876,14 +1881,14 @@
     }
    ],
    "source": [
-    "df_date_region_total = pd.concat([df_date_region_agg, pd.DataFrame([grand_total_series])], ignore_index=True)\n",
+    "df_date_region_total = pd.concat([df_date_region_agg, pd.DataFrame([grand_total_series])], axis = 0)\n",
     "\n",
     "display(df_date_region_total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 28,
    "id": "5388e301-e18a-450e-bd1b-adfdac02ad65",
    "metadata": {},
    "outputs": [
@@ -1908,21 +1913,26 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th></th>\n",
        "      <th>Total</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Grand Total</th>\n",
+       "      <th>Grand Total</th>\n",
+       "      <td>731.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Total]\n",
-       "Index: []"
+       "                         Total\n",
+       "Grand Total Grand Total  731.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1930,6 +1940,14 @@
    "source": [
     "df_date_region_total[df_date_region_total.index.isin([('Grand Total', 'Grand Total')])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02c6b214-64cf-4bf5-b207-1857151b6096",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
