fix(sn07): filter orders not present in `orders` list

--- a/notebooks/sn07_combining_datasets.ipynb
+++ b/notebooks/sn07_combining_datasets.ipynb
@@ -336,6 +336,17 @@
    "source": [
     "sum(price * quantity for _, _, _, _, _, price, quantity in order_details_right)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0eb1d4e-19f7-4d79-ad8b-4a093e585d33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter out orders not present in `orders` list by checkitn\n",
+    "sum(price * quantity for _, date, _, _, _, price, quantity in order_details_right if date != None)"
+   ]
   }
  ],
  "metadata": {
